--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -502,6 +502,9 @@ a.primary{
       color: #979797;
     }
   }
+  .ivu-page-item-active {
+    background-color: #14a4ff;
+  }
   .ivu-page-item-active a{
     color: #fff;
   }
