--- a/src/assets/variables.less
+++ b/src/assets/variables.less
@@ -12,6 +12,7 @@
 @border-color-base      : #e9e9e9;  // outside
 @border-color-split     : #e9e9e9;  // inside
 @table-td-hover-bg      : #fafafa;
+@table-td-highlight-bg  : #fafafa;
 
 // 背景颜色
 @background-color-base  : #ffffff;  // base
