--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,7 +1,9 @@
 @import '~iview/src/styles/index.less';
 @import './variables.less';
 
-
+body,html,#app{
+  height: 100%;
+}
 li{
   list-style-type: none
 }
